src/objects/CommunityAccessControl__c.object
<CustomObject>
    <description>Object used by WGU Commons to manage the access level that students have to a community, a group, and custom groups.</description>
    <fields>
        <fullName>AdministrationType__c</fullName>
        <label>Administration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Tip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnnouncementRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Announcement Record</label>
        <referenceTo>CommunityAccessControl__c</referenceTo>
        <relationshipLabel>Community Access Controls</relationshipLabel>
        <relationshipName>StudentAnnouncements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnouncementStatus__c</fullName>
        <formula>IF(OR(DateAnnouncementExpires__c = NULL, DateAnnouncementExpires__c &gt;=  TODAY()) , &apos;Active&apos;, &apos;Archived&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Announcement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CARE Profile</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Learning Communities</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the case that was created by the question posted,</description>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Learning Community</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunityId__c</fullName>
        <description>Id of the community that the student is assigned to.</description>
        <label>Community Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityStatus__c</fullName>
        <description>Status level of the student in the learning community</description>
        <label>Community Status</label>
        <picklist>
            <picklistValues>
                <fullName>Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomGroupId__c</fullName>
        <description>Id of the custom group</description>
        <label>Custom Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the associated group is a group made by the student.</description>
        <label>Custom Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateAnnouncementExpires__c</fullName>
        <label>Date Announcement Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Degree program the student is enrolled in</description>
        <label>Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Learning Communities</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <description>Id of the group that the student is assigned to.</description>
        <label>Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupLevel__c</fullName>
        <label>Group Level</label>
        <picklist>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModerationNeeded__c</fullName>
        <formula>IF(TEXT(CommunityStatus__c) = &apos;Super Viewer&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moderation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyResponse__c</fullName>
        <description>Response that was made by the course mentor</description>
        <inlineHelpText>The response from the Course Mentor.</inlineHelpText>
        <label>My Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalPostId__c</fullName>
        <description>The Id of the original post that they student made.</description>
        <label>Original Post Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostStatus__c</fullName>
        <description>The current status of the post.</description>
        <label>Post Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q/A Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PostType__c</fullName>
        <label>Post Type</label>
        <picklist>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Original question text that was asked by the student.</description>
        <inlineHelpText>Original question that was asked by the student.</inlineHelpText>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentResponse__c</fullName>
        <description>Response that was provided by another student.</description>
        <inlineHelpText>The answer that was provided by a peer.</inlineHelpText>
        <label>Student Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StudentStatus__c</fullName>
        <formula>TEXT(Student__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the student</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Communities</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ViewedByStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed by Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGUCourseInProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The course that is in the program that the student is assigned to.</description>
        <label>WGU Course In Program</label>
        <referenceTo>WGUCourseInProgram__c</referenceTo>
        <relationshipLabel>Learning Communities</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Community Access Controls</relationshipLabel>
        <relationshipName>CommunityAccessControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Access Control</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Access For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Access Controls</pluralLabel>
    <recordTypes>
        <fullName>CommunityAccess</fullName>
        <active>true</active>
        <description>Record type for setting the access level to a community</description>
        <label>Community Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommunityAdministration</fullName>
        <active>true</active>
        <description>Record type to hold the Announcements, Quick Tips, and Documents</description>
        <label>Community Administration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CourseAnnouncement</fullName>
        <active>true</active>
        <description>Record type for the announcements that are made by course mentors for a course.</description>
        <label>Course Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomGroupAccess</fullName>
        <active>true</active>
        <description>Record type for managing custom groups made by students in a community</description>
        <label>Custom Group Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>GroupAccess</fullName>
        <active>true</active>
        <description>Record type to hold the access level students have to the groups in a community</description>
        <label>Group Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>GroupAssignment</fullName>
        <active>true</active>
        <label>Group Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Post</fullName>
        <active>true</active>
        <description>Record type for the post that is made to a chatter group.</description>
        <label>Post</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>